--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/toolbar_orange</item>
         <item name="colorPrimaryVariant">@color/toolbar_orange</item>
-        <item name="colorOnPrimary">@color/toolbar_orange</item>
+        <item name="colorOnPrimary">@color/white</item>
         <item name="android:textColorPrimary">@color/black</item>
         <item name="android:textColorSecondary">@color/black</item>
         <!-- Secondary brand color. -->
